<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView">

                <LinearLayout
                        android:id="@+id/lin_lay_main"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true">
                        <LinearLayout
                                android:id="@+id/lin_lay_one"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/main_lin_lay_margin_top"
                                android:layout_marginBottom="@dimen/indication_layout_margin_bottom">
                                <TextView
                                        android:id="@+id/txtOne"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textAppearance="?android:attr/textAppearanceMedium"
                                        android:textColor="@color/text"
                                        android:text="@string/txt_one"
                                        android:textSize="@dimen/txt_size"
                                        android:clickable="true"/>
                                <LinearLayout
                                        android:id="@+id/indication_layout"
                                        android:orientation="horizontal"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginTop="@dimen/indication_layout_margin_top"
                                        >

                                        <ImageView
                                                android:id="@+id/indicator_status"
                                                android:layout_width="@dimen/indicator_view_width"
                                                android:layout_height="@dimen/indicator_view_height"
                                                android:layout_margin="@dimen/indicator_view_margin"
                                                android:background="@drawable/ball"
                                                android:clickable="true"
                                                />
                                        <TextView
                                                android:id="@+id/textView_status"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/txt_indicator"
                                                android:textColor="@color/text"
                                                android:textSize="@dimen/txt_size"
                                                android:layout_marginLeft="@dimen/indicator_txt_margin_left"
                                                android:clickable="true"/>
                                </LinearLayout>

                        </LinearLayout>
                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line"/>

                        <LinearLayout
                                android:id="@+id/lin_lay_recicle_view"
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/layout_recicle_view_margin_top"
                                android:layout_marginBottom="@dimen/layout_recicle_view_margin_bottom"
                                android:background="@color/green" >
                            <android.support.v7.widget.RecyclerView
                                    android:id="@+id/my_recycler_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scrollbars="vertical"
                                    />

                        </LinearLayout>
                        <LinearLayout
                                android:id="@+id/create_layout"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/layout_margin_top"
                                android:layout_marginBottom="@dimen/layout_margin_bottom">

                                <TextView android:id="@+id/textView_create"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:text="@string/txt_crate"
                                          android:textColor="@color/text"
                                          android:layout_marginBottom="@dimen/view_margin_bottom"
                                          android:textSize="@dimen/txt_size"
                                          android:clickable="true"/>

                                <TextView android:id="@+id/textView_create_data"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:textColor="@color/text"
                                          android:text="@string/txt_crate_data"
                                          android:textSize="@dimen/txt_size"
                                          android:clickable="true"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line"/>

                        <LinearLayout
                                android:id="@+id/layout_registreted"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/layout_margin_top"
                                android:layout_marginBottom="@dimen/layout_margin_bottom">
                                <TextView
                                        android:id="@+id/textView_registraited"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/text"
                                        android:text="@string/txt_registered"
                                        android:textSize="@dimen/txt_size"
                                        android:layout_marginBottom="@dimen/view_margin_bottom"
                                        android:clickable="true"/>
                                <TextView android:id="@+id/textView_registraited_data"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:textColor="@color/text"
                                          android:text="@string/txt_registered_data"
                                          android:textSize="@dimen/txt_size"
                                          android:clickable="true"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line"/>

                        <LinearLayout
                                android:id="@+id/term"
                                android:layout_marginTop="@dimen/layout_margin_top"
                                android:layout_marginBottom="@dimen/layout_margin_bottom"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <TextView android:id="@+id/textView_to_solve"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:textColor="@color/text"
                                          android:text="@string/txt_dead_line"
                                          android:textSize="@dimen/txt_size"
                                          android:layout_marginBottom="@dimen/view_margin_bottom"
                                          android:clickable="true"/>
                                <TextView android:id="@+id/textView_to_solve_data"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:textColor="@color/text"
                                          android:text="@string/txt_dead_line_data"
                                          android:textSize="@dimen/txt_size"
                                          android:clickable="true"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line"/>

                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/layout_margin_top"
                                android:layout_marginBottom="@dimen/layout_margin_bottom"
                                android:id="@+id/worker_hand">
                                <TextView android:id="@+id/textView_responsible"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:textColor="@color/text"
                                          android:text="@string/txt_worker"
                                          android:textSize="@dimen/txt_size"
                                          android:layout_marginBottom="@dimen/view_margin_bottom"
                                          android:clickable="true"/>
                                <TextView android:id="@+id/textView_responsible_organization"
                                          android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:textColor="@color/text"
                                          android:text="@string/txt_worker_hand"
                                          android:textSize="@dimen/txt_size"
                                          android:clickable="true"/>
                        </LinearLayout>
                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line"/>
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="@dimen/layout_margin_bottom"
                                android:layout_marginTop="@dimen/layout_descriprion_margin_top">
                                <TextView android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:text="@string/txt_trble_description"
                                          android:textSize="@dimen/txt_size"
                                          android:textColor="@color/text_description"
                                          android:id="@+id/description"
                                          android:clickable="true"/>
                        </LinearLayout>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/line"/>


                </LinearLayout>

        </ScrollView>


</RelativeLayout>
